# RealTimeChat

./: .env.example  .gitignore  Makefile  pyproject.toml
app/application/: main.py
app/application/api/: main.py
app/application/api/dependencies/: containers.py
app/application/api/messages/: handlers.py  schemas.py
app/domain/entities/: base.py  messages.py
app/domain/events/: base.py  messages.py
app/domain/exceptions/: messages.py
app/domain/values/: base.py  messages.py
app/infra/repositories/: messages.py
app/infra/repositories/messages/: base.py  converters.py  memory.py  mongo.py
app/logic/: init.py  mediator.py
app/logic/commands/: base.py  messages.py
app/logic/events/: base.py  messages.py
app/logic/exceptions/: base.py  mediator.py  messages.py
app/settings/: config.py
app/tests/: conftest.py  fixtures.py
app/tests/application/api/: conftest.py  test_messages.py
app/tests/domain/values/: test_messages.py
app/tests/domain/velues/: test_messages.py
app/tests/logic/: conftest.py  test_messages.py
docker_compose/: app.yml
