[tool.poetry]
name = "fastapichat"
version = "0.1.0"
description = ""
authors = ["Kirill Mikhailov <kicode@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = "^0.33.0"
motor = "^3.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
