[tool.poetry]
name = "fastapichat"
version = "0.1.0"
description = ""
authors = ["Kirill Mikhailov <kicode@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = "^0.33.0"
motor = "^3.6.0"
pytest = "^8.3.4"
faker = "^33.1.0"
pytest-asyncio = "^0.25.0"
punq = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
